Fix layout issues hiding forums on small displays

--- a/app/assets/stylesheets/users.scss
+++ b/app/assets/stylesheets/users.scss
@@ -101,23 +101,3 @@
 .stat-label {
   color: #646464;
 }
-
-// Hidden, for small screens
-@media (min-width: 1180px) and (max-width: 1200px) {
-  .hidden-sm {
-    display: none !important;
-  }
-}
-
-@media (max-width: 1180px) {
-  .hidden-xs {
-    display: none !important;
-  }
-}
-
-.last-seen {
-  margin-bottom: 15px;
-}
-
-
-
